--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -82,11 +82,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python_version: [3.6, 3.7, 3.8]
+        python_version: [3.6, 3.7, 3.8, 3.9]
         pytorch_version: [1.3, 1.4, 1.5, 1.6, 1.7, 1.8]
         exclude:
           # excludes PT 1.3 as it is missing on pypi
           - python_version: 3.8
+            pytorch_version: 1.3
+          - python_version: 3.9
             pytorch_version: 1.3
 
     steps:
